--- a/index.html
+++ b/index.html
@@ -76,9 +76,100 @@
         </nav>
       </header>
       <div class="content">
-        <div class="user-nav">user-nav</div>
+        <div class="user-nav">
+          <div class="user-nav--top"></div>
+          <div class="user-nav--bottom">
+            <div class="user-header">
+              <img src="./images/user-1.jpg" alt="user photo" />
+              <div>
+                <p class="user-greeting">Hi there,</p>
+                <p class="user-name">Emily Choi (@emily)</p>
+              </div>
+            </div>
+            <div class="user-nav__buttons">
+              <button class="btn">New</button>
+              <button class="btn">Upload</button>
+              <button class="btn">Share</button>
+            </div>
+          </div>
+        </div>
 
-        <main class="main-content">main</main>
+        <main class="main-content">
+          <section>
+            <h2>Your Projects</h2>
+            <ul class="project">
+              <li class="project-item">
+                <h3>Super Cool Project</h3>
+                <p>
+                  Dolores eos sequi quis, maxime voluptates quos. Eveniet
+                  ducimus enim, nam necessitatibus ullam nulla facilis.
+                </p>
+              </li>
+              <li class="project-item">
+                <h3>Impossible App</h3>
+                <p>
+                  Vitae numquam, velit ipsum dolorem quam dignissimos eligendi
+                  ipsa possimus nihil ut at pariatur reprehenderit.
+                </p>
+              </li>
+              <li class="project-item">
+                <h3>Ad Blocker</h3>
+                <p>
+                  Commodi dicta tenetur aliquid, nisi deleniti est ipsam cum,
+                  dolore molestias veritatis saepe accusantium illum rerum.
+                </p>
+              </li>
+              <li class="project-item">
+                <h3>Less Cool Project</h3>
+                <p>
+                  Suscipit aut excepturi ea porro inventore iusto quidem
+                  expedita quae incidunt veritatis ab, rem sunt modi veniam!
+                </p>
+              </li>
+              <li class="project-item">
+                <h3>Easy Peasy App</h3>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Consequatur officiis omnis itaque necessitatibus magnam quidem
+                  nisi officia voluptatum excepturi mollitia sit, a quasi nulla
+                  iste dicta.
+                </p>
+              </li>
+              <li class="project-item">
+                <h3>Money Maker</h3>
+                <p>
+                  Vel rerum odio quam eveniet, repellat cum harum illum dolore
+                  suscipit, ut distinctio similique, provident explicabo quidem.
+                </p>
+              </li>
+            </ul>
+          </section>
+          <div>
+            <section class="announcements">
+              <h2>Announcements</h2>
+              <div>
+                <h4>Site Maintenance</h4>
+                <p>
+                  Quisquam voluptas, quos quod fugit earum aliquam maiores
+                  adipisci magni doloribus quasi exercitationem.
+                </p>
+                <hr />
+                <h4>Community Share Day</h4>
+                <p>
+                  Animi alias perferendis iure voluptatem pariatur cupiditate
+                  dolore sequi minima atque perspiciatis facilis.
+                </p>
+                <hr />
+                <h4>Updated Privacy Policy</h4>
+                <p>
+                  Delectus debitis iusto minima officiis saepe animi non
+                  suscipit aliquam distinctio, excepturi id tempora!
+                </p>
+              </div>
+            </section>
+            <section class="trending"></section>
+          </div>
+        </main>
       </div>
     </div>
 
