--- a/index.html
+++ b/index.html
@@ -77,7 +77,19 @@
       </header>
       <div class="content">
         <div class="user-nav">
-          <div class="user-nav--top"></div>
+          <div class="user-nav--top">
+            <div class="user-search">
+              <input type="text" /><ion-icon
+                class="icon"
+                name="search-sharp"
+              ></ion-icon>
+            </div>
+            <div class="user-notification">
+              <ion-icon id="user-icon" name="notifications-outline"></ion-icon>
+              <img src="./images/user-1.jpg" alt="user photo" />
+              <p>Emily Choi</p>
+            </div>
+          </div>
           <div class="user-nav--bottom">
             <div class="user-header">
               <img src="./images/user-1.jpg" alt="user photo" />
@@ -151,19 +163,28 @@
                 <h4>Site Maintenance</h4>
                 <p>
                   Quisquam voluptas, quos quod fugit earum aliquam maiores
-                  adipisci magni doloribus quasi exercitationem.
+                  adipisci magni doloribus quasi exercitationem. Alias qui
+                  omnis, quis quibusdam ab necessitatibus. Maxime, distinctio ad
+                  laborum a iste nobis dignissimos ab accusantium officia
+                  ducimus, temporibus magni alias!
                 </p>
                 <hr />
                 <h4>Community Share Day</h4>
                 <p>
                   Animi alias perferendis iure voluptatem pariatur cupiditate
-                  dolore sequi minima atque perspiciatis facilis.
+                  dolore sequi minima atque perspiciatis facilis. Inventore iste
+                  voluptatem dolorem. Nam quo iure accusamus quas cumque nihil
+                  rem, cum dolore vero animi, dicta sequi soluta saepe iusto
+                  enim!
                 </p>
                 <hr />
                 <h4>Updated Privacy Policy</h4>
                 <p>
                   Delectus debitis iusto minima officiis saepe animi non
-                  suscipit aliquam distinctio, excepturi id tempora!
+                  suscipit aliquam distinctio, excepturi id tempora! Aut tempora
+                  fugiat quo quidem ipsum ad quis illum iusto doloremque
+                  suscipit tempore earum, laboriosam tenetur dolorum. A dolore
+                  atque est accusantium!
                 </p>
               </div>
             </section>
