Fixed the nesting in the projects section

--- a/index.html
+++ b/index.html
@@ -116,6 +116,10 @@
                   Dolores eos sequi quis, maxime voluptates quos. Eveniet
                   ducimus enim, nam necessitatibus ullam nulla facilis.
                 </p>
+                <div class="project-icons">
+                  <ion-icon name="eye-outline"></ion-icon>
+                  <ion-icon name="git-merge-outline"></ion-icon>
+                </div>
               </li>
               <li class="project-item">
                 <h3>Impossible App</h3>
