--- a/index.html
+++ b/index.html
@@ -111,52 +111,91 @@
             <h2>Your Projects</h2>
             <ul class="project">
               <li class="project-item">
-                <h3>Super Cool Project</h3>
-                <p>
-                  Dolores eos sequi quis, maxime voluptates quos. Eveniet
-                  ducimus enim, nam necessitatibus ullam nulla facilis.
-                </p>
+                <div>
+                  <h3>Super Cool Project</h3>
+                  <p>
+                    Dolores eos sequi quis, maxime voluptates quos. Eveniet
+                    ducimus enim, nam necessitatibus ullam nulla facilis.
+                  </p>
+                </div>
                 <div class="project-icons">
-                  <ion-icon name="eye-outline"></ion-icon>
-                  <ion-icon name="git-merge-outline"></ion-icon>
+                  <ion-icon class="icon" name="heart-outline"></ion-icon>
+                  <ion-icon class="icon" name="eye-outline"></ion-icon>
+                  <ion-icon class="icon" name="git-branch-outline"></ion-icon>
                 </div>
               </li>
               <li class="project-item">
-                <h3>Impossible App</h3>
-                <p>
-                  Vitae numquam, velit ipsum dolorem quam dignissimos eligendi
-                  ipsa possimus nihil ut at pariatur reprehenderit.
-                </p>
+                <div>
+                  <h3>Less Cool Project</h3>
+                  <p>
+                    Suscipit aut excepturi ea porro inventore iusto quidem
+                    expedita quae incidunt veritatis ab, rem sunt modi veniam!
+                  </p>
+                </div>
+                <div class="project-icons">
+                  <ion-icon class="icon" name="heart-outline"></ion-icon>
+                  <ion-icon class="icon" name="eye-outline"></ion-icon>
+                  <ion-icon class="icon" name="git-branch-outline"></ion-icon>
+                </div>
               </li>
               <li class="project-item">
-                <h3>Ad Blocker</h3>
-                <p>
-                  Commodi dicta tenetur aliquid, nisi deleniti est ipsam cum,
-                  dolore molestias veritatis saepe accusantium illum rerum.
-                </p>
+                <div>
+                  <h3>Impossible App</h3>
+                  <p>
+                    Vitae numquam, velit ipsum dolorem quam dignissimos eligendi
+                    ipsa possimus nihil ut at pariatur reprehenderit.
+                  </p>
+                </div>
+                <div class="project-icons">
+                  <ion-icon class="icon" name="heart-outline"></ion-icon>
+                  <ion-icon class="icon" name="eye-outline"></ion-icon>
+                  <ion-icon class="icon" name="git-branch-outline"></ion-icon>
+                </div>
               </li>
               <li class="project-item">
-                <h3>Less Cool Project</h3>
-                <p>
-                  Suscipit aut excepturi ea porro inventore iusto quidem
-                  expedita quae incidunt veritatis ab, rem sunt modi veniam!
-                </p>
+                <div>
+                  <h3>Easy Peasy App</h3>
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Consequatur officiis omnis itaque necessitatibus magnam
+                    quidem nisi officia voluptatum excepturi mollitia sit, a
+                    quasi nulla iste dicta.
+                  </p>
+                </div>
+                <div class="project-icons">
+                  <ion-icon class="icon" name="heart-outline"></ion-icon>
+                  <ion-icon class="icon" name="eye-outline"></ion-icon>
+                  <ion-icon class="icon" name="git-branch-outline"></ion-icon>
+                </div>
               </li>
               <li class="project-item">
-                <h3>Easy Peasy App</h3>
-                <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Consequatur officiis omnis itaque necessitatibus magnam quidem
-                  nisi officia voluptatum excepturi mollitia sit, a quasi nulla
-                  iste dicta.
-                </p>
+                <div>
+                  <h3>Ad Blocker</h3>
+                  <p>
+                    Commodi dicta tenetur aliquid, nisi deleniti est ipsam cum,
+                    dolore molestias veritatis saepe accusantium illum rerum.
+                  </p>
+                </div>
+                <div class="project-icons">
+                  <ion-icon class="icon" name="heart-outline"></ion-icon>
+                  <ion-icon class="icon" name="eye-outline"></ion-icon>
+                  <ion-icon class="icon" name="git-branch-outline"></ion-icon>
+                </div>
               </li>
               <li class="project-item">
-                <h3>Money Maker</h3>
-                <p>
-                  Vel rerum odio quam eveniet, repellat cum harum illum dolore
-                  suscipit, ut distinctio similique, provident explicabo quidem.
-                </p>
+                <div>
+                  <h3>Money Maker</h3>
+                  <p>
+                    Vel rerum odio quam eveniet, repellat cum harum illum dolore
+                    suscipit, ut distinctio similique, provident explicabo
+                    quidem.
+                  </p>
+                </div>
+                <div class="project-icons">
+                  <ion-icon class="icon" name="heart-outline"></ion-icon>
+                  <ion-icon class="icon" name="eye-outline"></ion-icon>
+                  <ion-icon class="icon" name="git-branch-outline"></ion-icon>
+                </div>
               </li>
             </ul>
           </section>
