Reformatted html for improved readability

--- a/index.html
+++ b/index.html
@@ -11,71 +11,105 @@
     <div class="container">
       <header class="header">
         <div class="logo">
-          <img class="logo-icon" src="assets/icons/view-dashboard.svg" alt="dashboard icon">
-          </svg>
+          <img
+            class="logo-icon"
+            src="assets/icons/view-dashboard.svg"
+            alt="dashboard icon"
+          />
           <h1>Dashboard</h1>
         </div>
+
         <nav class="sidebar">
           <ul class="sidebar__main">
             <li class="sidebar__item">
               <a href="#" class="sidebar__link">
-                <img class="icon" src="assets/icons/home.svg" alt="home icon">
+                <img class="icon" src="assets/icons/home.svg" alt="home icon" />
                 <span>Home</span></a
               >
             </li>
             <li class="sidebar__item">
               <a href="#" class="sidebar__link">
-                <img class="icon" src="assets/icons/account-details.svg" alt="account icon">
+                <img
+                  class="icon"
+                  src="assets/icons/account-details.svg"
+                  alt="account icon"
+                />
                 <span>Profile</span></a
               >
             </li>
             <li class="sidebar__item">
-							<a href="#" class="sidebar__link">
-                <img class="icon" src="assets/icons/message.svg" alt="chat bubble icon">
+              <a href="#" class="sidebar__link">
+                <img
+                  class="icon"
+                  src="assets/icons/message.svg"
+                  alt="chat bubble icon"
+                />
                 <span>Messages</span></a
               >
             </li>
             <li class="sidebar__item">
               <a href="#" class="sidebar__link">
-                <img class="icon" src="assets/icons/clock.svg" alt="clock icon">
+                <img
+                  class="icon"
+                  src="assets/icons/clock.svg"
+                  alt="clock icon"
+                />
                 <span>History</span></a
               >
             </li>
             <li class="sidebar__item">
               <a href="#" class="sidebar__link">
-                <img class="icon" src="assets/icons/note-multiple.svg" alt="multiple notes icon">
+                <img
+                  class="icon"
+                  src="assets/icons/note-multiple.svg"
+                  alt="multiple notes icon"
+                />
                 <span>Tasks</span></a
               >
             </li>
             <li class="sidebar__item">
               <a href="#" class="sidebar__link">
-                <img class="icon" src="assets/icons/account-group.svg" alt="group icon">
+                <img
+                  class="icon"
+                  src="assets/icons/account-group.svg"
+                  alt="group icon"
+                />
                 <span>Community</span></a
               >
             </li>
           </ul>
+
           <ul class="sidebar__settings">
             <li class="sidebar__item">
               <a href="#" class="sidebar__link">
-                <img class="icon" src="assets/icons/cog.svg" alt="cog icon">
+                <img class="icon" src="assets/icons/cog.svg" alt="cog icon" />
                 <span>Settings</span></a
               >
             </li>
             <li class="sidebar__item">
               <a href="#" class="sidebar__link">
-                <img class="icon" src="assets/icons/help-box.svg" alt="question mark icon">
+                <img
+                  class="icon"
+                  src="assets/icons/help-box.svg"
+                  alt="question mark icon"
+                />
                 <span>Support</span></a
               >
             </li>
             <li class="sidebar__item">
               <a href="#" class="sidebar__link">
-                <img class="icon" src="assets/icons/shield-check.svg" alt="shield with a check mark icon">
+                <img
+                  class="icon"
+                  src="assets/icons/shield-check.svg"
+                  alt="shield with a check mark icon"
+                />
                 <span>Tasks</span></a
               >
             </li>
           </ul>
         </nav>
       </header>
+
       <div class="content">
         <div class="user-nav">
           <div class="user-nav--top">
@@ -86,7 +120,12 @@
               ></ion-icon>
             </div>
             <div class="user-notification">
-              <a href="#"><img class="icon" src="assets/icons/bell-ring-outline.svg" alt="bell icon"></a>
+              <a href="#"
+                ><img
+                  class="icon"
+                  src="assets/icons/bell-ring-outline.svg"
+                  alt="bell icon"
+              /></a>
               <img src="./images/user-1.jpg" alt="user photo" />
               <p>Emily Choi</p>
             </div>
@@ -120,12 +159,24 @@
                   </p>
                 </div>
                 <div class="project-icons">
-                  <a href="#">
-                    <img class="icon" src="assets/icons/star-plus-outline.svg" alt="star plus icon"></a>
-										<a href="#">
-											<img class="icon" src="assets/icons/eye-plus-outline.svg" alt="eye plus icon"></a>
-											<a href="#">
-												<img class="icon" src="assets/icons/share-variant-outline.svg" alt="share variant icon"></a>
+                  <a href="#"
+                    ><img
+                      class="icon"
+                      src="assets/icons/star-plus-outline.svg"
+                      alt="star plus icon"
+                  /></a>
+                  <a href="#"
+                    ><img
+                      class="icon"
+                      src="assets/icons/eye-plus-outline.svg"
+                      alt="eye plus icon"
+                  /></a>
+                  <a href="#"
+                    ><img
+                      class="icon"
+                      src="assets/icons/share-variant-outline.svg"
+                      alt="share variant icon"
+                  /></a>
                 </div>
               </li>
               <li class="project-item">
@@ -137,12 +188,24 @@
                   </p>
                 </div>
                 <div class="project-icons">
-                  <a href="#">
-                    <img class="icon" src="assets/icons/star-plus-outline.svg" alt="star plus icon"></a>
-										<a href="#">
-											<img class="icon" src="assets/icons/eye-plus-outline.svg" alt="eye plus icon"></a>
-											<a href="#">
-												<img class="icon" src="assets/icons/share-variant-outline.svg" alt="share variant icon"></a>
+                  <a href="#"
+                    ><img
+                      class="icon"
+                      src="assets/icons/star-plus-outline.svg"
+                      alt="star plus icon"
+                  /></a>
+                  <a href="#"
+                    ><img
+                      class="icon"
+                      src="assets/icons/eye-plus-outline.svg"
+                      alt="eye plus icon"
+                  /></a>
+                  <a href="#"
+                    ><img
+                      class="icon"
+                      src="assets/icons/share-variant-outline.svg"
+                      alt="share variant icon"
+                  /></a>
                 </div>
               </li>
               <li class="project-item">
@@ -154,12 +217,24 @@
                   </p>
                 </div>
                 <div class="project-icons">
-                  <a href="#">
-                    <img class="icon" src="assets/icons/star-plus-outline.svg" alt="star plus icon"></a>
-										<a href="#">
-											<img class="icon" src="assets/icons/eye-plus-outline.svg" alt="eye plus icon"></a>
-											<a href="#">
-												<img class="icon" src="assets/icons/share-variant-outline.svg" alt="share variant icon"></a>
+                  <a href="#"
+                    ><img
+                      class="icon"
+                      src="assets/icons/star-plus-outline.svg"
+                      alt="star plus icon"
+                  /></a>
+                  <a href="#"
+                    ><img
+                      class="icon"
+                      src="assets/icons/eye-plus-outline.svg"
+                      alt="eye plus icon"
+                  /></a>
+                  <a href="#"
+                    ><img
+                      class="icon"
+                      src="assets/icons/share-variant-outline.svg"
+                      alt="share variant icon"
+                  /></a>
                 </div>
               </li>
               <li class="project-item">
@@ -173,12 +248,24 @@
                   </p>
                 </div>
                 <div class="project-icons">
-                  <a href="#">
-                    <img class="icon" src="assets/icons/star-plus-outline.svg" alt="star plus icon"></a>
-										<a href="#">
-											<img class="icon" src="assets/icons/eye-plus-outline.svg" alt="eye plus icon"></a>
-											<a href="#">
-												<img class="icon" src="assets/icons/share-variant-outline.svg" alt="share variant icon"></a>
+                  <a href="#"
+                    ><img
+                      class="icon"
+                      src="assets/icons/star-plus-outline.svg"
+                      alt="star plus icon"
+                  /></a>
+                  <a href="#"
+                    ><img
+                      class="icon"
+                      src="assets/icons/eye-plus-outline.svg"
+                      alt="eye plus icon"
+                  /></a>
+                  <a href="#"
+                    ><img
+                      class="icon"
+                      src="assets/icons/share-variant-outline.svg"
+                      alt="share variant icon"
+                  /></a>
                 </div>
               </li>
               <li class="project-item">
@@ -190,12 +277,24 @@
                   </p>
                 </div>
                 <div class="project-icons">
-                  <a href="#">
-                    <img class="icon" src="assets/icons/star-plus-outline.svg" alt="star plus icon"></a>
-										<a href="#">
-											<img class="icon" src="assets/icons/eye-plus-outline.svg" alt="eye plus icon"></a>
-											<a href="#">
-												<img class="icon" src="assets/icons/share-variant-outline.svg" alt="share variant icon"></a>
+                  <a href="#"
+                    ><img
+                      class="icon"
+                      src="assets/icons/star-plus-outline.svg"
+                      alt="star plus icon"
+                  /></a>
+                  <a href="#"
+                    ><img
+                      class="icon"
+                      src="assets/icons/eye-plus-outline.svg"
+                      alt="eye plus icon"
+                  /></a>
+                  <a href="#"
+                    ><img
+                      class="icon"
+                      src="assets/icons/share-variant-outline.svg"
+                      alt="share variant icon"
+                  /></a>
                 </div>
               </li>
               <li class="project-item">
@@ -208,61 +307,62 @@
                   </p>
                 </div>
                 <div class="project-icons">
-                  <a href="#">
-                    <img class="icon" src="assets/icons/star-plus-outline.svg" alt="star plus icon"></a>
-										<a href="#">
-											<img class="icon" src="assets/icons/eye-plus-outline.svg" alt="eye plus icon"></a>
-											<a href="#">
-												<img class="icon" src="assets/icons/share-variant-outline.svg" alt="share variant icon"></a>
+                  <a href="#"
+                    ><img
+                      class="icon"
+                      src="assets/icons/star-plus-outline.svg"
+                      alt="star plus icon"
+                  /></a>
+                  <a href="#"
+                    ><img
+                      class="icon"
+                      src="assets/icons/eye-plus-outline.svg"
+                      alt="eye plus icon"
+                  /></a>
+                  <a href="#"
+                    ><img
+                      class="icon"
+                      src="assets/icons/share-variant-outline.svg"
+                      alt="share variant icon"
+                  /></a>
                 </div>
               </li>
             </ul>
           </section>
-          <div>
-            <section class="announcements">
-              <h2>Announcements</h2>
-              <div>
-                <h4>Site Maintenance</h4>
-                <p>
-                  Quisquam voluptas, quos quod fugit earum aliquam maiores
-                  adipisci magni doloribus quasi exercitationem. Alias qui
-                  omnis, quis quibusdam ab necessitatibus. Maxime, distinctio ad
-                  laborum a iste nobis dignissimos ab accusantium officia
-                  ducimus, temporibus magni alias!
-                </p>
-                <hr />
-                <h4>Community Share Day</h4>
-                <p>
-                  Animi alias perferendis iure voluptatem pariatur cupiditate
-                  dolore sequi minima atque perspiciatis facilis. Inventore iste
-                  voluptatem dolorem. Nam quo iure accusamus quas cumque nihil
-                  rem, cum dolore vero animi, dicta sequi soluta saepe iusto
-                  enim!
-                </p>
-                <hr />
-                <h4>Updated Privacy Policy</h4>
-                <p>
-                  Delectus debitis iusto minima officiis saepe animi non
-                  suscipit aliquam distinctio, excepturi id tempora! Aut tempora
-                  fugiat quo quidem ipsum ad quis illum iusto doloremque
-                  suscipit tempore earum, laboriosam tenetur dolorum. A dolore
-                  atque est accusantium!
-                </p>
-              </div>
-            </section>
-            <section class="trending"></section>
-          </div>
+
+          <section class="announcements">
+            <h2>Announcements</h2>
+            <div>
+              <h4>Site Maintenance</h4>
+              <p>
+                Quisquam voluptas, quos quod fugit earum aliquam maiores
+                adipisci magni doloribus quasi exercitationem. Alias qui omnis,
+                quis quibusdam ab necessitatibus. Maxime, distinctio ad laborum
+                a iste nobis dignissimos ab accusantium officia ducimus,
+                temporibus magni alias!
+              </p>
+              <hr />
+              <h4>Community Share Day</h4>
+              <p>
+                Animi alias perferendis iure voluptatem pariatur cupiditate
+                dolore sequi minima atque perspiciatis facilis. Inventore iste
+                voluptatem dolorem. Nam quo iure accusamus quas cumque nihil
+                rem, cum dolore vero animi, dicta sequi soluta saepe iusto enim!
+              </p>
+              <hr />
+              <h4>Updated Privacy Policy</h4>
+              <p>
+                Delectus debitis iusto minima officiis saepe animi non suscipit
+                aliquam distinctio, excepturi id tempora! Aut tempora fugiat quo
+                quidem ipsum ad quis illum iusto doloremque suscipit tempore
+                earum, laboriosam tenetur dolorum. A dolore atque est
+                accusantium!
+              </p>
+            </div>
+          </section>
+          <section class="trending"></section>
         </main>
       </div>
     </div>
-
-    <script
-      type="module"
-      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
-    ></script>
-    <script
-      nomodule
-      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
-    ></script>
   </body>
 </html>
