Replaced magnifying glass icon with Material Design

--- a/index.html
+++ b/index.html
@@ -114,10 +114,11 @@
         <div class="user-nav">
           <div class="user-nav--top">
             <div class="user-search">
-              <input type="text" /><ion-icon
+              <input type="text" /><img
                 class="icon"
-                name="search-sharp"
-              ></ion-icon>
+                src="assets/icons/magnify.svg"
+                alt="magnifying glass icon"
+              />
             </div>
             <div class="user-notification">
               <a href="#"
