Moved images to the assets folder and removed codes that are no longer needed

--- a/index.html
+++ b/index.html
@@ -127,13 +127,13 @@
                   src="assets/icons/bell-ring-outline.svg"
                   alt="bell icon"
               /></a>
-              <img src="./images/user-1.jpg" alt="user photo" />
+              <img src="./assets/images/user-1.jpg" alt="user photo" />
               <p>Emily Choi</p>
             </div>
           </div>
           <div class="user-nav--bottom">
             <div class="user-header">
-              <img src="./images/user-1.jpg" alt="user photo" />
+              <img src="./assets/images/user-1.jpg" alt="user photo" />
               <div>
                 <p class="user-greeting">Hi there,</p>
                 <p class="user-name">Emily Choi (@emily)</p>
