Fixed a typo in the html

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                   src="assets/icons/shield-check.svg"
                   alt="shield with a check mark icon"
                 />
-                <span>Tasks</span></a
+                <span>Privacy</span></a
               >
             </li>
           </ul>
